fixed the bug where the gray background icon is not showing and correct some style

--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ body{
 
 .container{
 	margin: 50px auto;
-	width: 90%;
+	width: 75%;
 }
 
 header h1{
@@ -22,13 +22,12 @@ header h1{
 
 .according{
 	background-color: #333;
-	width: 100%;	/*width: 856px;*/
+	width: 879px;
 	min-width: 800px; 
 	display: block;
 	list-style-type: none;
 	overflow: hidden;
 	height: 200px;
-	font-size: 0;
 }
 
 .tab{
@@ -45,6 +44,14 @@ header h1{
 
 .tab:hover{
 	width: 450px;
+}
+
+.tab:hover .social a:before{
+	margin-left: -100px;
+}
+
+.tab:hover .social a:after{
+	margin-left: -5px;
 }
 
 .tab .content{
@@ -67,29 +74,90 @@ header h1{
 	padding-right: 30px;
 }
 
-.social a:before, .social a:after{
+.social a:before, 
+.social a:after{
+	transition: all 0.4s ease-in-out 0.1s;
 	width: 80px;
 	height: 200px;
 	position: absolute;
 	text-indent: 0;
-	padding: 90px 0 0 25px;
+	/*gray icon version*/
+	padding-top: 90px;
+	padding-left: 25px;
+	/*end of gray icon version*/
 	display: block;
-	font-family: "Font Awesome 5 Brands";
+	font-family: 'Font Awesome 5 Brands';
 	font-weight: 400;
 	color: #fff;
+	font-size: 28px;
 }
 
 .social a:after{
+	/*color icon version*/
 	font-size: 48px;
 	padding-left: 20px;
 	padding-top: 80px;
+	margin-left: 85px;
+	/*end of color icon version*/
 }
 
 /* Add icons*/
-.facebook a:before, .facebook a:after{
-	content: "\f09a";
+/*facebook*/
+.facebook a:before,
+.facebook a:after{
+	content: '\f09a';
 }
 
 .facebook a:after{
-	background-color: blue;
+	background-color: #3b5999;
+}
+
+/*instagram*/
+.instagram a:before,
+.instagram a:after{
+	content: '\f16d';
+}
+
+.instagram a:after{
+	background-color: #e4405f;
+}
+
+/*linkedin*/
+.linkedin a:before,
+.linkedin a:after{
+	content: '\f08c';
+}
+
+.linkedin a:after{
+	background-color: #0077B5;
+}
+
+/*jobteaser*/
+.jobteaser a:before,
+.jobteaser a:after{
+	content: '\f3b7';
+}
+
+.jobteaser a:after{
+	background-color: #00c300;
+}
+
+/*stack Overflow*/
+.stackOverflow a:before,
+.stackOverflow a:after{
+	content: '\f16c';
+}
+
+.stackOverflow a:after{
+	background-color: #f48024;
+}
+
+/*github*/
+.github a:before,
+.github a:after{
+	content: '\f09b';
+}
+
+.github a:after{
+	background-color: #333;
 }
